src/objects/Email_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recipient_Id__c</fullName>
        <label>Recipient Id</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recipient_Mail__c</fullName>
        <label>Recipient Mail</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recipient_Name__c</fullName>
        <label>Recipient Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Email Entry</label>
    <nameField>
        <label>Email Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>